# SeWaS

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.in  CMakeSettings.json  Dockerfile  README.md  bootstrap.bat  bootstrap.sh
.github/workflows/: Linux.yml  Windows.yml  ccpp.yml
cmake/modules/: RulesJDF.cmake
cmake/resources/: CMakeLists.txt.vcpkg
cmake/resources/adios/: CMakeLists.txt
cmake/resources/parsec/: CMakeLists.txt
cmake/resources/vcpkg/: CMakeLists.txt
data/input/: TestA.cfg  TestA.json  TestB.json  TestC.json  TestX.json
include/: CartesianMesh3D.hxx  CentralFDOperator.hxx  Config.hxx  Constants.hxx  DataSet.hxx  ExecutionContext.hxx  ExternalSource.hxx  HaloManager.hxx  IOManager.hxx  Indexer.hxx  LinearSeismicWaveModel.hxx  LogManager.hxx  Mesh3DPartitioning.hxx  MetricsManager.hxx  MinimumCommunicationPriorityEvaluator.hxx  Numerics.hxx  OS.hxx  SEWASPaRSEC.hxx  SEWASParameterManager.hxx  SEWASSequential.hxx  SpatialBlockField.hxx  Tiles.hxx  Types.hxx  Version.hxx  VisualizationManager.hxx  constants.h
scripts/: bootstrap-sewas.ps1  bootstrap-sewas.sh
src/: CartesianMesh3D.cxx  DataSet.cxx  ExecutionContext.cxx  ExternalSource.cxx  HaloManager.cxx  IOManager.cxx  LinearSeismicWaveModel.cxx  LogManager.cxx  Mesh3DPartitioning.cxx  MetricsManager.cxx  SEWASPaRSEC.cxx  SEWASParameterManager.cxx  SEWASSequential.cxx  VisualizationManager.cxx  main.cxx
src/runtimes/parsec/: sewas.jdf
tests/: CMakeLists.txt  ComputeVelocityUnitTest.cxx  ComputeVelocityUnitTest.hxx  FDOUnitTest.cxx  FDOUnitTest.hxx  HaloExchangeUnitTest.cxx  HaloExchangeUnitTest.hxx  HaloExtractUnitTest.cxx  HaloExtractUnitTest.hxx  HaloUpdateUnitTest.cxx  HaloUpdateUnitTest.hxx
tests/testers/: test_parallel_partitionning.py  test_tiling.py
